getting started with combat

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
       <canvas class="gameCanvas" width="1444" height="1080"></canvas>
       <div class="gameFrame"></div>
     </div>
-    <div class="actionsContainer"></div>
-    <div class="infoBar sideBar"></div>
+    <div class="actionsContainer">
+    </div>
+    <div class="infoBar sideBar">
+      <div class="partyContainer"></div>
+    </div>
     <div class="textBox hidden">
       <p>Hello, this is simply a test message, not actual info</p>
     </div>
@@ -31,6 +34,9 @@
 <img src="gfx/icons/player_filler.png" alt="" class="playerImg canvasImage">
 <img src="gfx/icons/crossed-swords.png" alt="" class="enemyImg canvasImage">
 
+<script src="script/misc.js"></script>
+<script src="script/syntax.js"></script>
+<script src="script/equipment.js"></script>
 <script src="script/character.js"></script>
 <script src="script/player.js"></script>
 <script src="script/enemy.js"></script>
