--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <script src="script/misc.js"></script>
 <script src="script/syntax.js"></script>
 <script src="script/equipment.js"></script>
+<script src="script/powers.js"></script>
 <script src="script/character.js"></script>
 <script src="script/player.js"></script>
 <script src="script/enemy.js"></script>
