--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <script src="script/equipment.js"></script>
 <script src="script/powers.js"></script>
 <script src="script/character.js"></script>
+<script src="script/summon.js"></script>
 <script src="script/player.js"></script>
 <script src="script/enemy.js"></script>
 <script src="script/battles.js"></script>
